Fixed css bug on firefox

--- a/assets/styles/scientilla-components.less
+++ b/assets/styles/scientilla-components.less
@@ -28,7 +28,6 @@
   font-size: 1.5em;
 
   margin-top: 0.4em;
-  margin-left: 20px;
 }
 
 .scientilla-items-found {
